--- a/src/components/FloatCart/style.scss
+++ b/src/components/FloatCart/style.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .float-cart {
   position: fixed;
   top: 0;
@@ -17,7 +19,7 @@
     width: 50px;
     height: 50px;
     color: #ececec;
-    background-color: #1b1a20;
+    background-color: $pink;
     text-align: center;
     line-height: 50px;
     position: absolute;
