--- a/src/components/Shelf/style.scss
+++ b/src/components/Shelf/style.scss
@@ -91,7 +91,7 @@
 
     &__price {
       height: 60px;
-      color: $lead;
+      color: $red;
 
       .val {
         b {
@@ -106,7 +106,7 @@
       }
 
       .promo {
-        color: $lead;
+        color: $red;
         font-size: 23px;
       }
 
